<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="like_button">Like Button</string>
    <string name="likes_count" translatable="false">10</string>
    <string name="share_button" translatable="false">Share Button</string>
    <string name="share_count" translatable="false">5</string>
    <string name="views_count" translatable="false">5</string>
    <string name="view_image" translatable="false">View Image</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit">Edit</string>
    <string name="save_button" translatable="false">Save Button</string>
    <string name="edit_menu_image" translatable="false">Edit Menu Image</string>
    <string name="menu_edit">Edit message</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="edit_text" translatable="false">Edit Text</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="post_author">Post author</string>
    <string name="video" translatable="false">Video</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from server</string>
    <string name="notification_user_likes">User %1$s liked %2$s\\\'s post</string>
    <string name="notification_message">User %1$s published new post:</string>
</resources>