<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/editTop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,save" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_text"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:padding="@dimen/common_spacing"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@id/toolsTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:srcCompat="@drawable/baseline_check_circle_outline_24" />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/editTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="editImage,edit_menu, cancel_button" />

    <ImageView
        android:id="@+id/editImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/edit_menu_image"
        android:src="@drawable/baseline_edit_24"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/toolsTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTop"
        />

    <TextView
        android:id="@+id/edit_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_spacing"
        android:text="@string/menu_edit"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/editImage"
        app:layout_constraintTop_toTopOf="@id/editTop" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_spacing"
        android:layout_marginStart="@dimen/button_spacing"
        android:layout_marginEnd="@dimen/button_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/edit_text"
        app:layout_constraintBottom_toBottomOf="@id/toolsTop"
        app:layout_constraintStart_toEndOf="@id/editImage"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"/>

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/toolsTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:srcCompat="@drawable/baseline_close_24"
        app:layout_constraintTop_toTopOf="@+id/editTop" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/editGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="editImage, edit_menu, editText, cancel_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>

